--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mpdapi"
   ],
   "dependencies": {
+    "array-flat-polyfill": "^1.0.1",
     "debug": "^4.2.0",
     "file-type": "^15.0.1",
     "mpd2": "^1.0.4"
